# sales-forecasting

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: 1_baseline_dataset_construction.ipynb  2_data_exploration.ipynb  3_feature_engineering.ipynb  4_deep_nets.ipynb  4_tabular_model_training.ipynb  5_nn_model_training.ipynb  6_hyperparameter_optimization.ipynb  7_hyperparameter_optimization_genetic.ipynb  8_feature_selection_genetic.ipynb  _data_format.ipynb  _data_processing.ipynb  data_exploration.ipynb  data_format.ipynb  data_processing.ipynb  feature_engineering.ipynb
sales_forecasting/: features.py  plot.py  utils.py
scripts/: init_env.sh
