[project]
name = "sales-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deltalake>=0.21.0",
    "ipykernel==6.29.5",
    "kaggle>=1.6.17",
    "lightgbm==4.5.0",
    "matplotlib==3.9.2",
    "numpy==2.0.0",
    "optuna==4.0.0",
    "pandas>=2.2.3",
    "pyarrow==17.0.0",
    "scikit-learn==1.5.2",
    "seaborn>=0.13.2",
    "statsforecast==1.7.8",
    "torch==2.4.1",
]
